--- a/src/sections/Draw/MatchInfo.css
+++ b/src/sections/Draw/MatchInfo.css
@@ -1,6 +1,6 @@
 /* ================================ CSS =================================== */
 /*
- * Styles specific to the Teams component. This file covers the layout for
+ * Styles specific to the MatchInfo component. This file covers the layout for
  * displaying the generated teams, match info box, and the score input/save
  * section. It also includes colour customisations for different teams.
  */
